--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "uao-neumonia"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11.9"
+requires-python = "==3.11.9"
 dependencies = []
 
 [tool.pytest.ini_options]
